; ModuleID = '/home/carl/AnghaBench/esp-idf/components/console/argtable3/extr_argtable3.c_arg_freetable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/console/argtable3/extr_argtable3.c_arg_freetable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arg_hdr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arg_freetable(i8** %0, i64 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.arg_hdr**, align 8
  %6 = alloca i64, align 8
  store i8** %0, i8*** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i8**, i8*** %3, align 8
  %8 = bitcast i8** %7 to %struct.arg_hdr**
  store %struct.arg_hdr** %8, %struct.arg_hdr*** %5, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* %6, align 8
  br label %9

9:                                                ; preds = %29, %2
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %32

13:                                               ; preds = %9
  %14 = load %struct.arg_hdr**, %struct.arg_hdr*** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds %struct.arg_hdr*, %struct.arg_hdr** %14, i64 %15
  %17 = load %struct.arg_hdr*, %struct.arg_hdr** %16, align 8
  %18 = icmp eq %struct.arg_hdr* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %29

20:                                               ; preds = %13
  %21 = load %struct.arg_hdr**, %struct.arg_hdr*** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = getelementptr inbounds %struct.arg_hdr*, %struct.arg_hdr** %21, i64 %22
  %24 = load %struct.arg_hdr*, %struct.arg_hdr** %23, align 8
  %25 = call i32 @free(%struct.arg_hdr* %24)
  %26 = load %struct.arg_hdr**, %struct.arg_hdr*** %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = getelementptr inbounds %struct.arg_hdr*, %struct.arg_hdr** %26, i64 %27
  store %struct.arg_hdr* null, %struct.arg_hdr** %28, align 8
  br label %29

29:                                               ; preds = %20, %19
  %30 = load i64, i64* %6, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %6, align 8
  br label %9

32:                                               ; preds = %9
  ret void
}

declare dso_local i32 @free(%struct.arg_hdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
